--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,19 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
   }
+  .icon-container {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+  }
+  h1{
+    margin-top: 5%;
+  }
   #character {
     font-size: 5em;
     margin: 2em;
   }
-  #next-button {
+  button {
     font-size: 1.5em;
     padding: 1em 2em;
     border: none;
@@ -14,8 +22,11 @@ body {
     color: white;
     border-radius: 5px;
   }
-  #next-button:hover {
+  button:hover {
     background-color: #006E8E;
+    cursor: pointer;
+  }
+  i:hover {
     cursor: pointer;
   }
   @media only screen and (max-width: 768px) {
@@ -24,9 +35,51 @@ body {
       font-size: 3em;
       margin: 1em;
     }
-    #next-button {
+    button {
       font-size: 1em;
       padding: 0.5em 1em;
     }
+  }
+  
+  #settings-popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    background-color: #f1f1f1;
+    padding: 20px;
+    border: 1px solid #ccc;
+  }
+  
+  #settings-popup.show {
+    display: block;
+  }
+  
+  #characters-input {
+    width: 100%;
+    height: 100px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+  }
+  
+  #save-button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  #save-button:hover {
+    background-color: #45a049;
   }
   
